[package]
name = "ntrumls"
version = "0.0.1-dev"
links = "ntrumls"
build = "build.rs"
authors = ["Razican <admin@razican.com>"]
readme = "README.md"
description = """
NTRUMLS interface in Rust. based on the reference implementation.
"""
keywords = ["NTRUMLS", "NTRU", "NTRUSign", "NTRUEncrypt"]

[dependencies]
libc = "0.2.1"

[build-dependencies]
gcc = "0.3.19"

[dev-dependencies]
rand = "0.3.11"
