[package]
name = "ntrumls"
version = "0.6.1"
links = "ntrumls"
build = "build.rs"
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/FractalGlobal/NTRUMLS-rs"
documentation = "http://fractal.global/NTRUMLS-rs"
authors = ["Razican <razican@fractal.global>"]
description = """
NTRUMLS library for Rust. An interface to the reference implementation.
"""
keywords = ["NTRUMLS", "NTRU", "NTRUSign", "NTRUEncrypt"]

[dependencies]
libc = "0.2"

[build-dependencies]
gcc = "0.3"

[dev-dependencies]
rand = "0.3"
